--- a/index.html
+++ b/index.html
@@ -2,19 +2,23 @@
 <html lang="en">
 <head>
 	<meta charset="uft-8" />
-	<title>CPR Trainer</title>
+	<title>CPR</title>
 </head>
 <body>
 	<div id="wrapper">
 		<h1>CPR</h1>
 		<div id="left">
-			<span>Reanimation Cycles</span><input type="text" disabled="" /><br />
+			<span>CPR Cycles</span><input type="text" disabled="" /><br />
 			<span>Shock</span><input type="text" disabled /><br />
 			<span>Amiodarone Administrations</span><input type="text" disabled /><br />
 			<span>Adrenaline Administrations</span><input type="text" disabled /><br />
 		</div>
+      
+      
 		<div id="left">
-			<button id="vt">Pulseless VT</button><br />
+          What ist the rhythm of the patient (check the ECG)?
+        <p>  
+		<button id="vt">Pulseless VT</button><br />
 			<button id="vf">Ventricular Fibrillation</button><br />
 			<button id="pea">PEA</button><br />
 			<button id="asys">Asystole</button><br />
